# pipemixer

./: .gitignore  .gitmodules  README.md  com.github.pipemixer.desktop  config.ini  meson.build  meson.options  meson_options.txt  pipemixer.1  pipemixer.ini  pipemixer.ini.5
assets/: io.github.heather7283.pipemixer.desktop  mkconfig.awk  pipemixer.ini
completion/: _pipemixer
man/: pipemixer.1  pipemixer.1.in  pipemixer.ini.5  pipemixer.ini.5.in
src/: collections.h  color.c  color.h  config.c  config.h  event_loop.c  event_loop.h  event_loop_impl.c  eventloop.c  eventloop.h  events.c  events.h  filter.c  filter.h  format.c  format.h  log.c  log.h  macros.h  menu.c  menu.h  ncurses_test.c  param_print.c  param_print.h  peaks.c  peaks.h  pipemixer.c  pipemixer.h  pollen_impl.c  props.c  props.h  pw.c  pw.h  pwtest.c  signals.c  signals.h  stb_ds_impl.c  strutils.c  strutils.h  tui.c  (+5 more)
src/collections/: array.c  array.h  dict.c  dict.h  hashmap.h  list.h  map.c  map.h  string.c  string.h  string_base.h  vec.c  vec.h  wstring.c  wstring.h
src/pw/: PIPEWIRE.md  common.c  common.h  default.c  default.h  device.c  device.h  events.c  events.h  node.c  node.h  roundtrip.c  roundtrip.h  stream.c  stream.h  types.c  types.h
src/tui/: menu.c  pad.c  pad.h  tui.c  tui.h
